Update accordion to be closed on load. Unfix background of jumbotron to test on mobile for issues

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -74,7 +74,6 @@ body {
     background-size: cover;
     background-position: center -100px;
     background-repeat: no-repeat;
-    background-attachment: fixed;
 
 }
 
